# wamr-ext

./: .gitignore  CMakeLists.txt  version.cmake  wamr-ext-aot.py  wamr_ext_lib.cmake
include/: wamr_ext_api.h
src/base/: BaseDef.h  FSUtility.cpp  FSUtility.h  LoopThread.cpp  LoopThread.h  Utility.cpp  Utility.h  WamrExtInternalDef.cpp  WamrExtInternalDef.h
src/wamr_ext_api/: wamr_ext_api.cpp  wamr_ext_version.cpp.in
src/wamr_ext_app/: MiniApp.cpp  miniapp.cpp
src/wamr_ext_lib/: PthreadExt.cpp  PthreadExt.h  WamrExtInternalDef.cpp  WamrExtInternalDef.h  WasiFSExt.cpp  WasiFSExt.h  WasiMiscExt.cpp  WasiMiscExt.h  WasiProcessExt.cpp  WasiProcessExt.h  WasiPthreadExt.cpp  WasiPthreadExt.h  WasiSocketExt.cpp  WasiSocketExt.h  WasiWamrExt.cpp  WasiWamrExt.h
